# PrivatePdf

./: .gitignore  404.html  CLAUDE.md  DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.nonroot  FUTURE-IMPROVEMENTS.md  LICENSE-ATTRIBUTION.md  SEO-AND-MONETIZATION.md  SIMPLE_MODE.md  STATIC-HOSTING.md  about.html  compare.html  contact.html  docker-compose.yml  faq.html  index-new.html  index.html  licensing.html  package-lock.json  package.json  pdf-converter.html  pdf-editor.html  pdf-merge-split.html  pdf-security.html  privacy.html  terms.html  tools.html  vite.config.ts  wrangler.jsonc
.github/workflows/: build-and-publish.yml  static.yml
blog/: compress-pdf-for-government-jobs.html  why-you-shouldnt-upload-pdfs.html
docs/: tool-dependency-map.md
docs/fixes/: low-tier-memory-optimization.md  wasm-migration-opportunities.md
integration-tests/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
integration-tests/fixtures/: sample.csv  sample.eml  sample.json  sample.md  sample.rtf  sample.txt  sample.xml
integration-tests/helpers/: generate-all-fixtures.mjs  generate-fixtures.mjs  test-helpers.ts
integration-tests/summary/: test-failure-summary.md
public/: _headers  llms.txt  robots.txt
scripts/: generate-sitemap.mjs  release.js  seo-optimize.cjs
skills/js-to-wasm-workspace/iteration-1/eval-1-color-adjustments/with_skill/outputs/: Cargo.toml  build.sh  image-effects-wasm-loader.ts  integration-example.ts  lib.rs  wasm-provider-updated.ts
skills/js-to-wasm-workspace/iteration-1/eval-1-color-adjustments/without_skill/outputs/: Cargo.toml  color-adjustments-loader.ts  integration-example.ts  lib.rs  wasm-provider-update.ts
skills/js-to-wasm-workspace/iteration-1/eval-2-scanner-effect/without_skill/outputs/: Cargo.toml  image-effects.ts  scanner-kernel-loader.ts  scanner_kernel.rs
skills/js-to-wasm-workspace/iteration-1/eval-3-unified-module/without_skill/outputs/: Cargo.toml  image-effects-integrated.ts  image-effects-wasm-loader.ts  lib.rs
skills/js-to-wasm-workspace/iteration-2/eval-3-unified-module/without_skill/outputs/: Cargo.toml  build.sh  image-effects-wasm.test.ts  image-effects-wasm.ts  image-effects.ts  integration-guide.md  lib.rs
src/css/: signature-fonts.css  styles.css
src/js/: main.ts  sw-register.ts  ui.ts
src/pages/: add-attachments.html  add-blank-page.html  add-page-labels.html  add-stamps.html  add-watermark.html  adjust-colors.html  alternate-merge.html  background-color.html  bates-numbering.html  bmp-to-pdf.html  bookmark.html  cbz-to-pdf.html  change-permissions.html  combine-single-page.html  compare-pdfs.html  compress-pdf.html  crop-pdf.html  csv-to-pdf.html  decrypt-pdf.html  delete-pages.html  deskew-pdf.html  digital-sign-pdf.html  divide-pages.html  edit-attachments.html  edit-metadata.html  edit-pdf.html  email-to-pdf.html  encrypt-pdf.html  epub-to-pdf.html  excel-to-pdf.html  extract-attachments.html  extract-images.html  extract-pages.html  extract-tables.html  fb2-to-pdf.html  flatten-pdf.html  (+81 more)
(+198 files in other folders)
