[package]
name = "color-adjustments-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance WASM color adjustment pipeline for BentoPDF"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
