[package]
name = "scanner-kernel"
version = "0.1.0"
edition = "2021"
description = "WASM pixel-processing kernel for BentoPDF scanner effect"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "scanner_kernel.rs"

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"      # Optimize for size — this is a small kernel
lto = true
strip = true
codegen-units = 1
