[package]
name = "bentopdf-image-effects"
version = "0.1.0"
edition = "2021"
description = "Unified WASM module for all pixel-level image effects in BentoPDF"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"       # Optimize for binary size — keeps .wasm download small
lto = true
codegen-units = 1
strip = true
